--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,7 @@
 [build]
-  functions = "netlify/functions"
-  
-[functions]
-  node_bundler = "esbuild"
+functions = "netlify/functions"
+command = "npx vite build"
+publish = "dist"
 
-# Environment variables for email service
-# Add these in your Netlify dashboard under Site settings > Environment variables
-# EMAIL_USER = your-email@gmail.com
-# EMAIL_PASS = your-app-password
+[functions]
+node_bundler = "esbuild"
